--- a/App.xaml
+++ b/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="IDOT_IDOT.App"
+﻿<Application x:Class="WPF_IDOT_Project.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:IDOT_IDOT"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:WPF_IDOT_Project"
+             StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
