[VIEW][ADD] Add ArticleListPage.xaml

--- a/Views/ArticleListPage.xaml
+++ b/Views/ArticleListPage.xaml
@@ -10,6 +10,15 @@
       Title="Home">
 
     <Grid>
-        
+        <ListView Name="Articles" VerticalContentAlignment="Top" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="False">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                        <Image HorizontalAlignment="Left" VerticalAlignment="Center" Source="{Binding Image}"/>
+                        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding Description}"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </Page>
