[VIEW][ADD] Add correct URIs to navigate between pages

--- a/WPF_Client/View/ArticleListPage.xaml
+++ b/WPF_Client/View/ArticleListPage.xaml
@@ -10,7 +10,7 @@
       Title="Articles">
 
     <Grid>
-        <ListView Name="Articles" VerticalContentAlignment="Top" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="False">
+        <ListView Name="Articles" VerticalContentAlignment="Top" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="False" SelectionChanged="Articles_SelectionChanged">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
