--- a/WPF_Client/View/ArticleListPage.xaml
+++ b/WPF_Client/View/ArticleListPage.xaml
@@ -10,14 +10,15 @@
       Title="Articles">
 
     <Grid>
-        <ListView Name="Articles" VerticalContentAlignment="Top" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="False" SelectionChanged="Articles_SelectionChanged">
+        <ListView Name="Articles" VerticalContentAlignment="Top" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False" SelectionChanged="Articles_SelectionChanged">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
-                        <Image HorizontalAlignment="Left" VerticalAlignment="Center" Source="{Binding ImageSource}"/>
-                        <StackPanel Orientation="Vertical" HorizontalAlignment="Left">
-                            <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Text="{Binding Title}"/>
-                            <TextBlock TextTrimming="WordEllipsis" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding Text}"/>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" Height="80">
+                        <Image VerticalAlignment="Center" Source="{Binding ImageSource}" Width="75" Margin="5" Stretch="Uniform"/>
+                        <StackPanel Orientation="Vertical" HorizontalAlignment="Left" VerticalAlignment="Center">
+                            <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Text="{Binding TitleAuto}" FontWeight="Bold"/>
+                            <TextBlock Text=" "/>
+                            <TextBlock HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding TextTrimmed}" TextWrapping="Wrap"/>
                         </StackPanel>
                     </StackPanel>
                 </DataTemplate>
