--- a/WPF_Client/View/CredentialWindow.xaml
+++ b/WPF_Client/View/CredentialWindow.xaml
@@ -73,6 +73,7 @@
                 Height="25"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Center"
+                IsEnabled="{Binding LoginReady, UpdateSourceTrigger=PropertyChanged}"
                 Click="ButtonLogin_Click">
             Login
         </Button>
@@ -133,6 +134,7 @@
                 Height="25"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Center"
+                IsEnabled="{Binding RegisterReady, UpdateSourceTrigger=PropertyChanged}"
                 Click="ButtonRegister_Click">
             Register
         </Button>
